Task7/gatekeeper/constraint-templates/hostpath.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostpath
  labels:
    app.kubernetes.io/part-of: propdevelopment
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostPath
      validation:
        openAPIV3Schema:
          type: object
          properties:
            message:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowhostpath

        violation[{"msg": msg}] {
          v := input.review.object.spec.volumes[_]
          v.hostPath
          msg := sprintf("hostPath запрещён (volume %v)", [v.name])
        }
