Task7/gatekeeper/constraint-templates/runasnonroot.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiresecurecontext
  labels:
    app.kubernetes.io/part-of: propdevelopment
spec:
  crd:
    spec:
      names:
        kind: K8sRequireSecureContext
      validation:
        openAPIV3Schema:
          type: object
          properties:
            message:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiresecurecontext

        violation[{"msg": msg}] {
          c := input_containers[_]
          not c.securityContext.runAsNonRoot
          msg := sprintf("runAsNonRoot: true обязателен (контейнер %v)", [c.name])
        }

        violation[{"msg": msg}] {
          c := input_containers[_]
          c.securityContext.runAsNonRoot == false
          msg := sprintf("runAsNonRoot: true обязателен (контейнер %v)", [c.name])
        }

        violation[{"msg": msg}] {
          c := input_containers[_]
          c.securityContext.runAsUser == 0
          msg := sprintf("запуск от root (UID 0) запрещён (контейнер %v)", [c.name])
        }

        violation[{"msg": msg}] {
          c := input_containers[_]
          not c.securityContext.readOnlyRootFilesystem
          msg := sprintf("readOnlyRootFilesystem: true обязателен (контейнер %v)", [c.name])
        }

        violation[{"msg": msg}] {
          c := input_containers[_]
          c.securityContext.readOnlyRootFilesystem == false
          msg := sprintf("readOnlyRootFilesystem: true обязателен (контейнер %v)", [c.name])
        }

        input_containers[c] {
          c := input.review.object.spec.containers[_]
        }

        input_containers[c] {
          c := input.review.object.spec.initContainers[_]
        }
